<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.PhoneNumberFragment">

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/gilroy_semi_bold"
        android:minHeight="0dp"
        android:paddingVertical="8dp"
        android:text="@string/but_continue"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/et_countryCode" />

    <EditText
        android:id="@+id/et_countryCode"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="5dp"
        android:maxLines="1"
        android:background="@drawable/curved_square_border"
        android:fontFamily="@font/gilroy_semi_bold"
        android:padding="5dp"
        android:paddingHorizontal="12dp"
        android:text="+91"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterPhoneNumber" />

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:inputType="phone"
        android:background="@drawable/curved_square_border"
        android:fontFamily="@font/gilroy_semi_bold"
        android:paddingVertical="5dp"
        android:paddingHorizontal="12dp"
        android:text="986524752"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/et_countryCode"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterPhoneNumber" />

    <TextView
        android:id="@+id/tv_enterPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy_extra_bold"
        android:text="@string/enter_phone_number"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_getOtp" />


    <TextView
        android:id="@+id/tv_getOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/get_otp"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>